; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifa_ifwithaddr_scoped.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if.c_ifa_ifwithaddr_scoped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifaddr = type { i32 }
%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.ifaddr* @ifa_ifwithaddr_scoped(%struct.sockaddr* %0, i32 %1) #0 {
  %3 = alloca %struct.sockaddr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ifaddr*, align 8
  store %struct.sockaddr* %0, %struct.sockaddr** %3, align 8
  store i32 %1, i32* %4, align 4
  store %struct.ifaddr* null, %struct.ifaddr** %5, align 8
  %6 = call i32 (...) @ifnet_head_lock_shared()
  %7 = load %struct.sockaddr*, %struct.sockaddr** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.ifaddr* @ifa_ifwithaddr_scoped_locked(%struct.sockaddr* %7, i32 %8)
  store %struct.ifaddr* %9, %struct.ifaddr** %5, align 8
  %10 = call i32 (...) @ifnet_head_done()
  %11 = load %struct.ifaddr*, %struct.ifaddr** %5, align 8
  ret %struct.ifaddr* %11
}

declare dso_local i32 @ifnet_head_lock_shared(...) #1

declare dso_local %struct.ifaddr* @ifa_ifwithaddr_scoped_locked(%struct.sockaddr*, i32) #1

declare dso_local i32 @ifnet_head_done(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
